# ETF_Arbitrage_Strategy

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
backtest/: audits.py  costs.py  engine.py
data/: splits.py
data/adapters/: akshare_etf.py  efinance_etf.py
data/cache/akshare/: 159509.parquet  159632.parquet  159781.parquet  159834.parquet  159919.parquet  159922.parquet  159934.parquet  159937.parquet  159967.parquet  510300.parquet  510310.parquet  510330.parquet  510510.parquet  513600.parquet  513660.parquet  518800.parquet  518880.parquet
data/cache/efinance/: 159607_nav.parquet  159607_price.parquet  159919_nav.parquet  159919_price.parquet  159920_nav.parquet  159920_price.parquet  159922_nav.parquet  159922_price.parquet  159934_nav.parquet  159934_price.parquet  159937_nav.parquet  159937_price.parquet  159967_nav.parquet  159967_price.parquet  510300_nav.parquet  510300_price.parquet  510310_nav.parquet  510310_price.parquet  510330_nav.parquet  510330_price.parquet  510500_nav.parquet  510500_price.parquet  510510_nav.parquet  510510_price.parquet  513600_nav.parquet  513600_price.parquet  (+6 more)
data/universe/: build.py
docs/: STRATEGY.md
scripts/: generate_figures.py  run_round_0001_is.py  run_round_0002_is.py  run_round_0003_is.py  run_round_0004_train.py  run_round_0004_validate.py  run_round_0005_train.py  run_round_0005_validate.py  run_round_0006_oos.py  run_round_0006_train.py  run_round_0006_validate.py
strategy/etf_mean_reversion/: signals.py
tests/: test_oos_guard.py  test_signals_lookahead.py
