[project]
name = "etf-arbitrage"
version = "0.0.1"
description = "Research and backtest framework for A-share ETF arbitrage strategies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hu" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=15.0",
    "tushare>=1.4",
    "akshare>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "scipy>=1.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "lxml>=5.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
